167401067-feature(articles, helpers, articles.spec) get user's bookmarked articles
- Implement get a user's bookmarked articles
- Add tests for feature
- Document feature

[Delivers #167401067]
